GNOME Bugzilla – Bug 720946
Details panel - 'Install Updates' button is not working
Last modified: 2014-04-07 14:46:53 UTC
The button 'Install Updates' in 'Details' does not work in Fedora 20. It just shows 'System Up-To-Date' or 'Install Updates' , but when you click on it, nothing happens. It works only if gnome-packagekit-updater is installed. I guess that in the new Fedora, where there is only gnome-software, this button must launch it when updates are available.
Created attachment 264774 [details] details
I just noticed this as well. Not good. Since the Software application handles updates now, I think we have two options here: 1. Remove the button altogether. 2. Have the "Check for updates" button launch Software, and have it show the Updates view
(In reply to comment #2) ... > 1. Remove the button altogether. > 2. Have the "Check for updates" button launch Software, and have it show the > Updates view Either of these would fix bug 691895 and bug 676980.
(In reply to comment #2) > I just noticed this as well. Not good. > > Since the Software application handles updates now, I think we have two options > here: > > 1. Remove the button altogether. > 2. Have the "Check for updates" button launch Software, and have it show the > Updates view I recommend the second option :)
(In reply to comment #4) > (In reply to comment #2) > > I just noticed this as well. Not good. > > > > Since the Software application handles updates now, I think we have two options > > here: > > > > 1. Remove the button altogether. > > 2. Have the "Check for updates" button launch Software, and have it show the > > Updates view > > I recommend the second option :) That'll require that we resolve bug 722924 first... :)
commit 1df975607ad3522e5c78ea70e44e9ff671d5b83e Author: Richard Hughes <richard@hughsie.com> Date: Fri Feb 14 10:20:37 2014 +0000 info: Just show a static 'Check for updates' button Resolves: https://bugzilla.gnome.org/show_bug.cgi?id=720946 :100644 100644 e780207... e82c6e8... M panels/info/cc-info-panel.c :100644 100644 f20d40c... b046c0b... M panels/info/info.ui
*** Bug 723853 has been marked as a duplicate of this bug. ***
The other alternative was "I think we really want the updates button and gnome-software to show the same information. With the way things currently stand, that means the updates button s hould only show up if we find a prepared update - ie a file named /var/lib/PackageKit/prepared-update" But this solution seems fine as well.
Created attachment 269243 [details] [review] info: check for prepared updates If GNOME Software is installed, we do not want to check if an update is actually available, because GNOME Software claims we are up to date unless an update has actually been prepared. This is only for GNOME 3.10. Richard has already pushed a solution to master, but his fix doesn't make sense for 3.10, where Software does not check for updates.
Maybe I should have opened a new bug for 3.10 instead of reusing this one... anyway, reopening just to make sure this doesn't get lost.
Removing from the 3.12 whiteboard since this is 3.10 only now.
(In reply to comment #9) > Created an attachment (id=269243) [details] [review] > info: check for prepared updates Richard or Bastien, can I push this to gnome-3-10 (only)? Otherwise the Install Updates button usually sends the user to a No Updates Available page in GNOME Software.
Pushed to gnome-3-10 Attachment 269243 [details] pushed as 0f5e433 - info: check for prepared updates