info: Just show a static 'Check for updates' button

Resolves: https://bugzilla.gnome.org/show_bug.cgi?id=720946